# QE

./: .gitignore
PWCOND/Doc/: F_ORBITAL_README.md  QUICK_REFERENCE.md  f_orbital_theory.md  theory_code_comparison.md
PWCOND/pycbs/: .gitignore  CUSTOM_KPOINTS.md  INSTALL.md  README.md  ROADMAP.md  SUMMARY.md  pyproject.toml
PWCOND/pycbs/examples/: example_al_bulk.py  example_custom_kpoints.py  example_hamiltonian.py  example_integrated_cbs.py  example_potential.py  example_wfc_reader.py
PWCOND/pycbs/pycbs/: __init__.py  calculator.py  cli.py  compbs.py  hamiltonian.py  kgrid.py  potential.py  reader.py  wfc_reader.py  writer.py
PWCOND/pycbs/tests/: __init__.py  test_hamiltonian.py  test_potential.py  test_pycbs.py  test_wfc_reader.py
PWCOND/src/: README_f_validation.md  four.f90  scatter_forw.f90
